--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,9 +130,9 @@ add_library(nuts::nuts ALIAS walnuts)
 ##       Example        ##
 ##########################
 if (WALNUTS_BUILD_EXAMPLES)
-  add_executable(test_nuts ${CMAKE_CURRENT_SOURCE_DIR}/examples/test.cpp)
-  target_link_libraries(test_nuts PRIVATE nuts::nuts)
-  target_compile_options(test_nuts PRIVATE -O3 -Wall)
+  add_executable(examples ${CMAKE_CURRENT_SOURCE_DIR}/examples/examples.cpp)
+  target_link_libraries(examples PRIVATE nuts::nuts)
+  target_compile_options(examples PRIVATE -O3 -Wall)
 endif()
 
 ##########################
