reference align left

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,8 +157,9 @@ endif()
 # Define list of files to format (you can make this recursive if desired)
 file(GLOB_RECURSE ALL_SOURCE_FILES
   "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/**/*.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/examples/**/*.cpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/tests/**/*.cpp"
 )
 
 find_program(CLANG_FORMAT_BIN clang-format)
