--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,9 +102,9 @@ if(WALNUTS_BUILD_STAN)
       "${CMAKE_BINARY_DIR}/_deps/bridgestan-src/src"
     )
 
-  add_executable(test_stan ${CMAKE_CURRENT_SOURCE_DIR}/examples/test_stan.cpp)
-  target_link_libraries(test_stan PRIVATE Eigen3::Eigen nuts::nuts BridgeStan::BridgeStan)
-  target_compile_options(test_stan PRIVATE -Wall)
+  add_executable(examples_stan ${CMAKE_CURRENT_SOURCE_DIR}/examples/examples_stan.cpp)
+  target_link_libraries(examples_stan PRIVATE Eigen3::Eigen nuts::nuts BridgeStan::BridgeStan)
+  target_compile_options(examples_stan PRIVATE -Wall)
 endif()
 
 #############################
