--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 # CMake Folders and Files
 build/
-# ignore everything in extras/
-extras/
-# except keep the .gitignore and readme.md
-!extras/.gitignore
-!extras/readme.md
+compile_commands.json
+
 # Perf files
 /perf.data
 /perf.data.old
