inv mass/step warmup plots

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,11 @@ if (WALNUTS_BUILD_EXAMPLES)
 
   add_executable(walnuts-stationarity ${CMAKE_CURRENT_SOURCE_DIR}/examples/walnuts-stationarity.cpp) 
   target_link_libraries(walnuts-stationarity PRIVATE nuts::nuts) 
-  target_compile_options(walnuts-stationarity PRIVATE -O3 -Wall) 
+  target_compile_options(walnuts-stationarity PRIVATE -O3 -Wall)  
+
+  add_executable(walnuts-warmup ${CMAKE_CURRENT_SOURCE_DIR}/examples/walnuts-warmup.cpp) 
+  target_link_libraries(walnuts-warmup PRIVATE nuts::nuts) 
+  target_compile_options(walnuts-warmup PRIVATE -O3 -Wall)  
 endif()
 
 ##########################
