--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,3 +30,4 @@ endfunction()
 add_nuts_test(online_moments_test online_moments_test.cpp)
 add_nuts_test(dual_average_test dual_average_test.cpp)
 add_nuts_test(util_test util_test.cpp)
+add_nuts_test(span_test span_test.cpp)
