Parametrize tests to avoid duplication

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,6 @@
-set(gtest_force_shared_crt on)
+if(MSVC)
+  set(gtest_force_shared_crt on)
+endif()
 
 FetchContent_Declare(googletest
         DOWNLOAD_EXTRACT_TIMESTAMP ON
