Update Windows CI config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,12 @@ jobs:
           path: ./build/_deps/
           key: ${{ runner.os }}-${{ matrix.cfg.compiler }}-deps-${{ hashFiles('**/CMakeLists.txt') }}-v${{ env.CACHE_VERSION }}
 
-      - uses: ilammy/msvc-dev-cmd@v1
-        if: matrix.cfg.compiler == 'msvc'
+      - name: "Windows: Set up MSVC"
+        uses: ilammy/msvc-dev-cmd@v1
+        if: matrix.cfg.compiler == 'msvc' && matrix.cfg.os == 'windows'
+      - name: "Windows: Set up GCC"
+        uses: bwoodsend/setup-winlibs-action@v1
+        if: matrix.cfg.compiler == 'gcc' && matrix.cfg.os == 'windows'
 
       - name: Build
         run: |
