Move build logic for examples to own file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Run examples
         run: |
           cd build/
-          ./examples
+          ./examples/examples
         shell: bash
 
       - name: Test
