--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,10 +102,6 @@ if(WALNUTS_BUILD_STAN)
     target_include_directories(BridgeStan::BridgeStan INTERFACE
       "${CMAKE_BINARY_DIR}/_deps/bridgestan-src/src"
     )
-
-  add_executable(examples_stan ${CMAKE_CURRENT_SOURCE_DIR}/examples/examples_stan.cpp)
-  target_link_libraries(examples_stan PRIVATE Eigen3::Eigen nuts::nuts BridgeStan::BridgeStan)
-  target_compile_options(examples_stan PRIVATE -Wall)
 endif()
 
 #############################
@@ -132,17 +128,9 @@ add_library(nuts::nuts ALIAS walnuts)
 ##       Examples       ##
 ##########################
 if (WALNUTS_BUILD_EXAMPLES)
-  add_executable(examples ${CMAKE_CURRENT_SOURCE_DIR}/examples/examples.cpp)
-  target_link_libraries(examples PRIVATE nuts::nuts)
-  target_compile_options(examples PRIVATE -O3 -Wall)
+  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/examples")
 endif()
 
-##########################
-##       Extras         ##
-##########################
-if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/extras/CMakeLists.txt")
-  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/extras")
-endif()
 
 ##########################
 ##       Tests         ##
