no shared warmup; Dirichlet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ endif()
 ##########################
 option(WALNUTS_USE_MIMALLOC "Statically link mimalloc" OFF)
 option(WALNUTS_BUILD_EXAMPLES "Build the example targets for the library" ON)
-option(WALNUTS_BUILD_STAN "Build Stan example with BridgeStan" OFF)
+option(WALNUTS_BUILD_STAN "Build Stan example with BridgeStan" ON)
 option(WALNUTS_BUILD_TESTS "Build the test targets for the library" ON)
 option(WALNUTS_BUILD_DOCS "Build the documentation for the library" ON)
 # Build Types
@@ -217,14 +217,23 @@ endif()
 #############################
 ##           CLI           ##
 #############################
-FetchContent_Declare(
-  cxxopts
-  GIT_REPOSITORY https://github.com/jarro2783/cxxopts.git
-  GIT_TAG v3.3.1
-)
-FetchContent_MakeAvailable(cxxopts)
-
-add_executable(walnuts_cli ${CMAKE_CURRENT_SOURCE_DIR}/cli/walnuts.cpp)
-target_link_libraries(walnuts_cli PRIVATE cxxopts::cxxopts Eigen3::Eigen nuts::nuts BridgeStan::BridgeStan)  
-target_compile_features(walnuts_cli PRIVATE cxx_std_17)
+# include(FetchContent)  
+# FetchContent_Declare(
+#   cxxopts
+#   GIT_REPOSITORY https://github.com/jarro2783/cxxopts.git
+#   GIT_TAG v3.3.1
+# )
+# FetchContent_MakeAvailable(cxxopts)  
+# FetchContent_Declare(
+#   bridgestan
+#   GIT_REPOSITORY https://github.com/roualdes/bridgestan.git
+#   GIT_TAG main         # or a release tag if available
+# )
+# FetchContent_MakeAvailable(bridgestan)
+# find_package(BridgeStan CONFIG REQUIRED)  # sets BridgeStan::BridgeStan
+# target_link_libraries(walnuts_cli PRIVATE
+#   cxxopts::cxxopts Eigen3::Eigen nuts::nuts BridgeStan::BridgeStan)
+# add_executable(walnuts_cli ${CMAKE_CURRENT_SOURCE_DIR}/cli/walnuts.cpp)
+# target_link_libraries(walnuts_cli PRIVATE cxxopts::cxxopts Eigen3::Eigen nuts::nuts Bridgestan::Bridgestan)
+# target_compile_features(walnuts_cli PRIVATE cxx_std_17)
 
