refactor to remove cut-and-paste

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,8 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   -Wno-zero-as-null-pointer-constant -Wno-switch-default
   -Wno-missing-variable-declarations
   -Wno-variadic-macro-arguments-omitted
-  -Wno-reserved-identifier -Wno-unused-function)
+  -Wno-reserved-identifier -Wno-unused-function
+  -Wno-missing-prototypes)
 
   # Optionally enable IWYU if found
   find_program(IWYU_PATH NAMES include-what-you-use iwyu)
